--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "private": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/iLikeToBeAnonymous/INI_Editor.git"
