--- a/package.json
+++ b/package.json
@@ -31,15 +31,19 @@
   },
   "build": {
     "asar": true,
-    "files": ["out"],
+    "files": [
+      "./dist/**/*",
+      "main.js"
+    ],
     "win": {
-      "target": ["portable"]
-      },
-      "portable": {
-        "artifactName": "myPortable.exe"
-      }
+      "target": [
+        "portable"
+      ]
+    },
+    "portable": {
+      "artifactName": "myPortable.exe"
+    }
   },
-  "dependencies": {},
   "config": {},
   "researchComments": [
     {
@@ -47,8 +51,6 @@
       "infoLearned": "Source for manual edits to this file and where to put the 'build' key."
     },
     {
-      "note": "the 'pack' script option just makes a tar-gz of the project. I don't know what the purpose of that is since it's a git repo.",
-      "note": "the option '--win' in the scripts section is defined by the 'win' key in the 'electron-builder' section.",
       "note": "the 'win' key is a proper keyword, and it seems you can't replace it with 'foo' and expect it to work right as a parameter."
     }
   ]
